--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,11 @@
     padding: 0;
     box-sizing: inherit;
 }
+*,
+*:focus,
+*:hover {
+  outline: none;
+}
 html {
     font-size: 62.5%;    
 }
@@ -97,6 +102,14 @@ a {
       margin-left: 0px;
     }
 }
+@keyframes faderight {
+    0% {
+      margin-left: 0;
+    }
+    100% {
+      margin-left: 100vw;
+    }
+}
 .hamburger-logo {
     display: flex;
     flex-direction: row;
@@ -125,14 +138,7 @@ a {
 .hide {
     display: none;
 }
-@keyframes faderight {
-    0% {
-      margin-left: 0;
-    }
-    100% {
-      margin-left: 100vw;
-    }
-}
+
 .fade-right {
     animation: faderight 0.5s ease;
 }
@@ -151,12 +157,7 @@ a {
     .description{
         margin: 2rem;
         .description-title{
-            padding-bottom: 1.5rem;
-            font-family: $font-josefin-sans;
-            font-weight: $font-normal;
-            font-size: 9vw;
-            color: $Black;
-            text-transform: uppercase;
+            @include titles-h2;
         }
         .description-details{
             line-height: 2.5rem;
@@ -165,3 +166,103 @@ a {
         }
     }
 }
+.creations{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    text-align: center;
+    padding: 2rem;
+    .desktop-btn {
+        display: none;
+      }
+    .creations-title{
+        @include titles-h2;
+    }
+    .creation-card{
+        display: flex;
+        align-items: center;
+        background-size: cover;
+        width: 100%;
+        height: 15vh;
+        color: $White;
+        font-family: $font-josefin-sans;
+        font-size: 2rem;
+        margin-top: 2rem;
+        p{
+            margin-left: 2rem;
+        }
+    }
+    .earth {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("./images/mobile/image-deep-earth.jpg");        
+    }
+    .arcade {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("./images/mobile/image-night-arcade.jpg");
+    }
+    .soccer {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(./images/mobile/image-soccer-team.jpg);
+    }
+    .grid {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(./images/mobile/image-grid.jpg);
+    }
+    .up-above {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(./images/mobile/image-from-above.jpg);
+    }
+    .pocket-borealis {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(./images/mobile/image-pocket-borealis.jpg);
+    }
+    .curiosity {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(./images/mobile/image-curiosity.jpg);
+    }
+    .fisheye {
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(./images/mobile/image-fisheye.jpg);
+    }
+    .mobile-btn {
+        height: 3rem;
+        width: 9rem;
+        font-family: $font-josefin-sans;
+        background-color: $White;
+        color: $Black;
+        font-size: 1.2rem;
+        font-weight: bold;
+        letter-spacing: 0.2rem;
+        border: 0.1rem solid $Black;
+        margin-top: 2rem;
+    }
+}
+footer {
+    font-size: 2rem;
+    color: $White;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: $Black;
+    padding: 3rem 2rem 4rem 2rem;
+    margin-top: 5rem;
+    li{list-style-type: none;}
+    .left-footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav-footer{
+        line-height: 6rem;
+        margin: 3rem 0 5rem 0;
+    }
+    .right-footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .social-media{
+            width: 50vw;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            margin-bottom: 3rem;
+        }
+        .copyright {color: $VeryDarkGray;}
+    }
+}
+
+/*------------------------------------------------------------VERSION DESKTOP*------------------------------------------------------------------*/
+
