--- a/style.scss
+++ b/style.scss
@@ -266,3 +266,8 @@ footer {
 
 /*------------------------------------------------------------VERSION DESKTOP*------------------------------------------------------------------*/
 
+@media only screen and (min-width: $Mobile){
+    body{
+        display: none;
+    }
+}
