--- a/style.css
+++ b/style.css
@@ -295,5 +295,10 @@ footer .right-footer .copyright {
 }
 
 /*------------------------------------------------------------VERSION DESKTOP*------------------------------------------------------------------*/
+@media only screen and (min-width: 375px) {
+  body {
+    display: none;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
